# hackathon-climat-2025

./: .gitignore  .nojekyll  README.md  index.html  pyproject.toml  xxx.py
.github/workflow/: render.yaml
api/: main.py
api/routers/: climate.py
api/services/: boundary_service.py  climate_generator.py  geocoding.py
lg/: get_file_names.py
misc/: get-data.py  pop.py  read-data.py  train_model.py  train_model_prAdjust.py  train_model_wind.py
prez/: .gitignore  index.qmd
src/: __init__.py  data_integration.py  data_loaders.py  patched_lightgbm.py  spatial_aggregation.py
website/: _quarto.yml  index.qmd  styles.css
