[project]
name = "hackathon-climat-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "boto3>=1.42.0",
    "cartopy>=0.25.0",
    "fastparquet>=2024.11.0",
    "geopandas>=1.1.1",
    "h5netcdf>=1.7.3",
    "netcdf4>=1.7.3",
    "requests>=2.32.5",
    "s3fs>=0.4.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xarray>=2025.11.0",
]
